z-index .hr-divider-content resolved

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -19,6 +19,10 @@
   }
 }
 
+.hr-divider-content {
+  z-index: 0;
+}
+
 .lf-dialog {
   background: transparent;
   border: 0px;
